# movesic

./: .gitignore  DEVELOPMENT.md  README.md  alembic.ini  movesic.spec  movesic.sqlite-journal  pyproject.toml
.github/workflows/: build.yml  deploy.yml  lint.yml
movesic/: __main__.py  config.py  main.py
movesic/database/: README.md  __init__.py  crud.py  model.py
movesic/database/migrations/: __init__.py  env.py  script.py.mako
movesic/database/migrations/versions/: 21026e4d773b_initial.py  7878604896e0_app_name.py  9dcf7108cb87_user_info.py
movesic/engines/: __init__.py  api.py  deezer.py  spotify.py  youtube.py
movesic/gui/: __init__.py  dialogs.py  routes.py  widgets.py
movesic/youtube/: add_to_pl.py  like_pl.py
resources/: strings.xml
tests/: .gitignore  __init__.py  conftest.py  test_db_migrations.py  test_engine.py  test_spotify.py  test_youtube.py
tests/fixtures/: fixture_sqlalchemy.py
