[project]
name = "movesic"
# version = "0.0.0"
dynamic = ["version"]
description = "Simply move your music between services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "greenlet>=3.3.0",
    "lxml>=6.0.2",
    "nicegui>=3.4.1",
    "platformdirs>=4.5.1",
    "pygobject>=3.54.5 ; sys_platform == 'linux'",
    "spotipy>=2.25.2",
    "sqlalchemy>=2.0.45",
    "ytmusicapi>=1.11.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pylance>=1.0.0",
    "pytest>=9.0.2",
    "pytest-alembic>=0.12.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[project.optional-dependencies]
native = ["pywebview>=5.1"]

[project.scripts]
movesic = "movesic.__main__:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
exclude = ["movesic/database/migrations/versions"]

[tool.ruff.format]
preview = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
